Center the canvas

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style/reset.css" type="text/css">
+        <link rel="stylesheet" href="style/main.css" type="text/css">
     </head>
     <body onload="app.start()">
         <canvas id="glcanvas" width="1200" height="720">
