--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <script type="text/javascript" src="objects/ship.js"></script>
         <script type="text/javascript" src="objects/box.js"></script>
         <script type="text/javascript" src="objects/plane.js"></script>
+        <script type="text/javascript" src="objects/obstacles.js"></script>
         <script type="text/javascript" src="shader/shader.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </body>
