Have the app take up the whole screen.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <link rel="stylesheet" href="style/main.css" type="text/css">
     </head>
     <body onload="app.start()">
-        <canvas id="glcanvas" width="1200" height="720">
+        <canvas id="glcanvas"> 
             Your browser does not support the canvas element.
         </canvas>
 
