Changed how objects model data is loaded

--- a/index.html
+++ b/index.html
@@ -46,13 +46,21 @@
         <script type="text/javascript" src="math/matrix4.js"></script>
         <script type="text/javascript" src="math/vector3.js"></script>
         <script type="text/javascript" src="math/constants.js"></script>
+
         <script type="text/javascript" src="camera/camera.js"></script>
+
         <script type="text/javascript" src="objects/mesh.js"></script>
         <script type="text/javascript" src="objects/ship.js"></script>
         <script type="text/javascript" src="objects/box.js"></script>
         <script type="text/javascript" src="objects/plane.js"></script>
         <script type="text/javascript" src="objects/obstacles.js"></script>
+
         <script type="text/javascript" src="shader/shader.js"></script>
+
+        <script type="text/javascript" src="resources/rectangle_mesh.js"></script>
+        <script type="text/javascript" src="resources/ship_mesh.js"></script>
+        <script type="text/javascript" src="resources/plane_mesh.js"></script>
+
         <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
