--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <script type="text/javascript" src="objects/ship.js"></script>
         <script type="text/javascript" src="objects/box.js"></script>
         <script type="text/javascript" src="objects/plane.js"></script>
+        <script type="text/javascript" src="objects/ramp.js"></script>
         <script type="text/javascript" src="objects/obstacles.js"></script>
 
         <script type="text/javascript" src="shader/shader.js"></script>
