Reorganized things just a bit

--- a/index.html
+++ b/index.html
@@ -49,12 +49,18 @@
 
         <script type="text/javascript" src="camera/camera.js"></script>
 
-        <script type="text/javascript" src="objects/mesh.js"></script>
+        <script type="text/javascript" src="mesh/mesh.js"></script>
+
+        <script type="text/javascript" src="boundingBox/boundingBox.js"></script>
+
         <script type="text/javascript" src="objects/ship.js"></script>
         <script type="text/javascript" src="objects/box.js"></script>
         <script type="text/javascript" src="objects/plane.js"></script>
         <script type="text/javascript" src="objects/ramp.js"></script>
-        <script type="text/javascript" src="objects/obstacles.js"></script>
+
+        <script type="text/javascript" src="obstacles/obstacle0.js"></script>
+        <script type="text/javascript" src="obstacles/obstacle1.js"></script>
+        <script type="text/javascript" src="obstacles/obstacle2.js"></script>
 
         <script type="text/javascript" src="shader/shader.js"></script>
 
