Added in another obstacle and made sun way further
Sun needs to be farther out to avoid shadow lengths changing drastically
as ship moves

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <script type="text/javascript" src="obstacles/obstacle0.js"></script>
         <script type="text/javascript" src="obstacles/obstacle1.js"></script>
         <script type="text/javascript" src="obstacles/obstacle2.js"></script>
+        <script type="text/javascript" src="obstacles/obstacle3.js"></script>
 
         <script type="text/javascript" src="shader/shader.js"></script>
 
