--- a/index.html
+++ b/index.html
@@ -38,7 +38,30 @@
                 highp float scale1 = max(dot(normal, lightPosition1), 0.0) / 2.0;
                 highp float scale2 = max(dot(normal, lightPosition2), 0.0) / 2.0;
                 fragmentColor = color + (scale1 * light + scale2 * light);
-                
+
+                highp vec3 eyePosition = (viewMat * modelMat * vec4(vertexPosition, 1.0)).xyz;
+                highp float dist = length(eyePosition);
+                dist /= 500.0;
+                fragmentColor += vec3(dist, dist, dist);
+
+                gl_Position = projMat * vec4(eyePosition, 1.0);
+            }
+        </script>
+
+        <script id="plane-shader-fs" type="x-shader/x-fragment">
+            void main(void) {
+                gl_FragColor = vec4(0.8, 0.8, 0.8, 1.0);
+            }
+        </script>
+
+        <script id="plane-shader-vs" type="x-shader/x-vertex">
+            attribute vec3 vertexPosition;
+
+            uniform mat4 projMat;
+            uniform mat4 viewMat;
+            uniform mat4 modelMat;
+
+            void main(void) {
                 gl_Position = projMat * viewMat * modelMat * vec4(vertexPosition, 1.0);
             }
         </script>
