Have the map be sort of procedularly generated

--- a/index.html
+++ b/index.html
@@ -134,6 +134,8 @@
         <script type="text/javascript" src="resources/ship_mesh.js"></script>
         <script type="text/javascript" src="resources/plane_mesh.js"></script>
 
+        <script type="text/javascript" src="map/map.js"></script>
+
         <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
