--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
         </script>
 
         <script id="plane-shader-fs" type="x-shader/x-fragment">
+            uniform sampler2D sampler;
+
+            varying highp vec2 textureCoord;
+
             void main(void) {
-                gl_FragColor = vec4(0.8, 0.8, 0.8, 1.0);
+                gl_FragColor = texture2D(sampler, textureCoord) * vec4(0.1, 0.1, 0.1, 1.0);
+                gl_FragColor += vec4(0.7, 0.7, 0.7, 1.0);
             }
         </script>
 
@@ -61,7 +66,12 @@
             uniform mat4 viewMat;
             uniform mat4 modelMat;
 
+            uniform vec3 shipsPosition;
+
+            varying highp vec2 textureCoord;
+
             void main(void) {
+                textureCoord = vec2((vertexPosition.x + 1.0) * 32.0 + shipsPosition.x / 128.0, (vertexPosition.z + 1.0) * 32.0 + shipsPosition.z / 16.0); 
                 gl_Position = projMat * viewMat * modelMat * vec4(vertexPosition, 1.0);
             }
         </script>
