--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
         <script type="text/javascript" src="obstacles/obstacle1.js"></script>
         <script type="text/javascript" src="obstacles/obstacle2.js"></script>
         <script type="text/javascript" src="obstacles/obstacle3.js"></script>
+        <script type="text/javascript" src="obstacles/obstacle4.js"></script>
 
         <script type="text/javascript" src="shader/shader.js"></script>
 
