Added in a cool new obstacle

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
         <script type="text/javascript" src="obstacles/obstacle2.js"></script>
         <script type="text/javascript" src="obstacles/obstacle3.js"></script>
         <script type="text/javascript" src="obstacles/obstacle4.js"></script>
+        <script type="text/javascript" src="obstacles/obstacle5.js"></script>
 
         <script type="text/javascript" src="shader/shader.js"></script>
 
